DPNG-7444 fix marketplace view on safari and IE

--- a/app/ui/app/marketplace/marketplace.scss
+++ b/app/ui/app/marketplace/marketplace.scss
@@ -18,10 +18,12 @@
   .searchbar {
     width: 100%;
     padding: 10px;
+    height: 50px;
     search-bar {
       position: relative;
       width: 33.333%;
       max-width: 400px;
+      height:35px;
 
       em {
         position: absolute;
